updated face gen notebook and gitignore

--- a/dlnd_face_generation_v3.1.1.ipynb
+++ b/dlnd_face_generation_v3.1.1.ipynb
@@ -115,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "show_n_images = 25\n",
@@ -488,7 +490,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -534,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def train(epoch_count, batch_size, z_dim, learning_rate, beta1, get_batches, data_shape, data_image_mode):\n",
@@ -574,6 +580,9 @@
     "        for epoch_i in range(epoch_count):\n",
     "            for batch_images in get_batches(batch_size):\n",
     "                i += 1\n",
+    "                \n",
+    "                # transforming input to be [-1,1]\n",
+    "                batch_images = batch_images * 2\n",
     "                \n",
     "                # Random sample\n",
     "                batch_sampl = np.random.uniform(-1, 1, size=(batch_size, z_dim))\n",
@@ -1116,11 +1125,11 @@
     }
    ],
    "source": [
-    "batch_size = 75\n",
-    "z_dim = 100\n",
-    "learning_rate = 0.003\n",
-    "beta1 = 0.5\n",
     "\n",
+    "batch_size = 32\n",
+    "z_dim = 100\n",
+    "learning_rate = 0.0003\n",
+    "beta1 = 0.3\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -1158,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
