Added picture of GAN Architecture from kdnuggets post

--- a/dlnd_face_generation_v3.1.1.ipynb
+++ b/dlnd_face_generation_v3.1.1.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Since the celebA dataset is complex and you're doing GANs in a project for the first time, we want you to test your neural network on MNIST before CelebA.  Running the GANs on MNIST will allow you to see how well your model trains sooner.\n",
     "\n",
-    "If you're using [FloydHub](https://www.floydhub.com/), set `data_dir` to \"/input\" and use the [FloydHub data ID](http://docs.floydhub.com/home/using_datasets/) \"R5KrjnANiKVhLWAkpXhNBe\"."
+    "![High Level GAN Architecture](https://oshearesearch.com/wp-content/uploads/2016/07/mnist_gan.png)"
    ]
   },
   {
